# iggy-python-client

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  iggy_py.pyi  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
.github/: CI.yml
.github/workflows/: python.yml
python_examples/: README.md  consumer.py  consumer_with_identifier.py  producer.py
src/: client.rs  client_provider.rs  consumer.rs  identifier.rs  lib.rs  message.rs  receive_message.rs  send_message.rs  stream.rs  topic.rs
tests/: conftest.py  test_client.py
