[package]
name = "iggy-py"
version = "0.2.7"
edition = "2021"
authors = ["Dario Lencina Talarico <darioalessandrolencina@gmail.com>"]
license = "Apache-2.0"
description = "Apache Iggy is the persistent message streaming platform written in Rust, supporting QUIC, TCP and HTTP transport protocols, capable of processing millions of messages per second."
documentation = "https://docs.iggy.rs"
repository = "https://github.com/iggy-rs/iggy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "iggy_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.22.0"
iggy = "0.6.102"
tokio = { version = "1", features = ["full"] }
bytes = "1.7.1"
