[package]
name = "iggy-py"
version = "0.2.6"
edition = "2021"
authors = ["Dario Lencina Talarico <darioalessandrolencina@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "iggy_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.23.0"
iggy = "0.6.201"
tokio = { version = "1.43.0", features = ["full"] }
bytes = "1.10.0"
openssl = { version = "0.10.*", features = ["vendored"] }
pyo3-async-runtimes = { version = "0.23.0", features = ["attributes", "tokio-runtime"] }
